# sense-motive

./: Cargo.toml  ReadMe.md
examples/: sparse_signal_dct.rs
notebooks/: generated_data.ipynb
src/: complex.rs  lib.rs  matrix.rs  measurement_matrix.rs  precision.rs  sensing_matrix.rs  signal.rs  signal_utils.rs  transform_matrix.rs
src/algorithm/: matching_pursuit.rs  mod.rs  orthogonal_matching_pursuit.rs
tests/: matching_pursuit.rs
