[package]
name = "sense-motive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
nalgebra = "0.32.2"
num-complex = "0.4.3"
num-traits = "0.2.15"
rand = "0.8.5"
rustdct = "0.7.1"
rustfft = "6.1.0"

[dev-dependencies]
approx = "0.5.1"
plotly = "0.8.3"
